# uzg_emu_check

./: .gitignore  .travis.yml  Cargo.toml  README.md
resources/: fda_app_10x10.csv  fda_app_14x14.csv  fda_app_20x20.csv  fda_app_6x6.csv  of_app_10x10.csv  of_app_14x14.csv  of_app_20x20.csv  of_app_6x6.csv
src/: calc_param.rs  correction_data.rs  correction_data_set.rs  errors.rs  fda_table.rs  ipol.rs  lib.rs  main.rs  of_table.rs
