[package]
name = "emu_check"
version = "0.1.0"
authors = ["Tom <tomvercaut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
console = "0.11.3"
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
