[package]
name = "emu_check"
version = "0.1.0"
authors = ["Tom <tomvercaut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
console = "0.11.3"
log = "0.4.8"
simple_logger = "1.6.0"
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
csv = "1.1.3"
dirs = "3.0"

[dependencies.async-std]
version = "^1.6.2"
features = ["attributes",]
